upload working html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>Live Code Example</title>
+		<link rel="stylesheet" href="css/liveExampleCode.css">
+		<script src="scripts/liveExampleCode.js"></script>
 	</head>
 
 	<body>
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph. changes</p>
+		<div class="live-js-code">
+		</div>
+		<div class="live-js-output">
+		</div>
 	</body>
 </html>
