--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+	<link rel="stylesheet" href="StyleSheet.css">
 	<head>
 		<title>Live Code Example</title>
 		<link rel="stylesheet" href="css/liveExampleCode.css">
@@ -8,6 +9,8 @@
 	</head>
 
 	<body>
+		<textarea id="text1" cols="100" rows="20">
+		</textarea>
 		<div class="live-js-code">
 		</div>
 		<div class="live-js-output">
