remove whitespace from textbox
There was whitespace in the text area caused by accidental spaces. Removed spaces.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	</head>
 
 	<body>
-		<textarea id="text1" cols="100" rows="20">
-		</textarea>
+		<textarea id="text1" cols="100" rows="20"></textarea>
 		<div class="live-js-code">
 		</div>
 		<div class="live-js-output">
