Changed file names and added width/height settings

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-	<link rel="stylesheet" href="StyleSheet.css">
+	<link rel="stylesheet" href="liveCodeExample.css">
 	<head>
 		<title>Live Code Example</title>
 		<link rel="stylesheet" href="css/liveExampleCode.css">
@@ -9,10 +9,11 @@
 	</head>
 
 	<body>
-		<textarea id="text1" cols="100" rows="20"></textarea>
+		<center>
 		<div class="live-js-code">
 		</div>
 		<div class="live-js-output">
 		</div>
+		</center>
 	</body>
 </html>
