Update Html adresses #9

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
 		<title>Live Code Example</title>
 		<link rel="stylesheet" href="liveCodeExample.css">
 		<script src="scripts/liveExampleCode.js"></script>
+		<style type="text/css">
+			body {
+			    background-color: darkslategrey;
+			    color: azure;
+			    font-size: 1.1em;
+				margin: auto;
+			}
+			h1 {
+			    color: coral;
+			}
+		</style>
 	</head>
 
 	<body>
-		<div class="live-js-code">
+		<div class="live-js-code" style="height: 15rem; width: 25rem">
 		</div>
-		<div class="live-js-output">
+		<div class="live-js-code" style="height: 15rem; width: 25rem">
 		</div>
 	</body>
 </html>
