Update Html adresses #9

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Live Code Example</title>
-		<link rel="stylesheet" href="liveCodeExample.css">
+		<link rel="stylesheet" href="css/liveCodeExample.css">
 		<script src="scripts/liveExampleCode.js"></script>
 		<style type="text/css">
 			body {
