Update Html adresses #9

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	</head>
 
 	<body>
-		<div class="live-js-code" style="height: 15rem; width: 25rem">
+		<div class="live-js-code" style="height: 15rem; width: 25rem; margin: auto;">
 		</div>
-		<div class="live-js-code" style="height: 15rem; width: 25rem">
+		<div class="live-js-code" style="height: 15rem; width: 25rem; margin: auto;">
 		</div>
 	</body>
 </html>
