--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 			h1 {
 				color: coral;
 			}
+			.user-container-style {
+				height: 15rem;
+				width: 25rem;
+				margin: auto;
+				overflow: auto;
+			}
 		</style>
 	</head>
 
 	<body>
-		<div class="live-js-code" style="height: 15rem; width: 25rem; margin: auto;">
+		<div class="live-js-code user-container-style">
 		</div>
-		<div class="live-js-code" style="height: 15rem; width: 25rem; margin: auto;">
+		<div class="live-js-code user-container-style">
 		</div>
 	</body>
 </html>
