--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 	</head>
 
 	<body>
-		<div class="live-js-code user-container-style">
-		</div>
-		<div class="live-js-code user-container-style">
-		</div>
+		<pre class="live-js-code user-container-style" data-target="1 2 3 4 5">
+for(i = 0; i < 6; i++) {
+	console.log(i);
+}
+		</pre>
+		<pre class="live-js-code user-container-style" data-target="1 2 3 4 5">
+		</pre>
 	</body>
 </html>
